--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F8 Project 2.1</title>
+    <!-- Embed fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -12,6 +19,43 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <h1>F8 Project 2.1</h1>
+    <!-- Header -->
+    <header class="header fixed">
+      <div class="main-content">
+        <div class="body">
+          <img src="./assets/img/logo.svg" alt="Besnik." class="logo" />
+
+          <nav class="nav">
+            <ul>
+              <li>
+                <a href="#!" class="active">Home</a>
+              </li>
+              <li>
+                <a href="#!">Features</a>
+              </li>
+              <li>
+                <a href="#!">Pricing</a>
+              </li>
+              <li>
+                <a href="#!">About</a>
+              </li>
+              <li>
+                <a href="#!">Contact</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="actions">
+            <a href="#!" class="sign-in-btn">Sign in</a>
+            <a href="#!" class="btn sign-up-btn">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main style="min-height: 5000px"></main>
+
+    <!-- Footer -->
+    <footer class="footer"></footer>
   </body>
 </html>
