--- a/index.html
+++ b/index.html
@@ -53,7 +53,68 @@
       </div>
     </header>
 
-    <main style="min-height: 5000px"></main>
+    <main style="min-height: 5000px">
+      <!-- Hero -->
+      <div class="hero">
+        <div class="main-content">
+          <div class="row">
+            <div class="hero-left">
+              <p class="sub-heading">😎 EASY LEARNING PLATFORM</p>
+              <h1 class="heading">Words learner come here.</h1>
+              <p class="desc">
+                Build skills with courses, certificates, and get online
+                knowledge from our world-class platform.
+              </p>
+              <div class="cta-group">
+                <a href="#!" class="btn">Get Started</a>
+                <button class="play">
+                  <img src="./assets/icons/play.svg" alt="" />
+                </button>
+              </div>
+            </div>
+            <div class="hero-right">
+              <img
+                class="img"
+                src="./assets/img/hero-img.svg"
+                alt="Words learner come here."
+              />
+              <div class="course-quantity">
+                <img src="./assets/icons/course-quantity.svg" alt="" />
+              </div>
+              <div class="schedules">
+                <p class="title">Schedules</p>
+                <img
+                  src="./assets/img/schedule-1.svg"
+                  alt=""
+                  class="schedule"
+                />
+                <img
+                  src="./assets/img/schedule-2.svg"
+                  alt=""
+                  class="schedule"
+                />
+                <img
+                  src="./assets/img/schedule-3.svg"
+                  alt=""
+                  class="schedule"
+                />
+                <span></span>
+              </div>
+              <div class="active-users">
+                <p class="title">Our Active Students</p>
+                <div class="avatars">
+                  <img class="avatar" src="./assets/img/avatar-1.jpg" alt="" />
+                  <img class="avatar" src="./assets/img/avatar-2.jpg" alt="" />
+                  <img class="avatar" src="./assets/img/avatar-3.jpg" alt="" />
+                  <img class="avatar" src="./assets/img/avatar-4.jpg" alt="" />
+                  <span class="avatar">10K+</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- Footer -->
     <footer class="footer"></footer>
