--- a/index.html
+++ b/index.html
@@ -114,6 +114,56 @@
           </div>
         </div>
       </div>
+
+      <!-- Features -->
+      <div class="features">
+        <div class="main-content">
+          <div class="body">
+            <p class="sub-heading">F E A T U R E S</p>
+            <h2 class="heading">
+              We are providing suitable features for students.
+            </h2>
+            <p class="desc">
+              Read our awesome feature that is absolutely suit for you. Explore
+              the feature and know the best.
+            </p>
+          </div>
+
+          <div class="feature-list">
+            <div class="item">
+              <div class="icon">
+                <img src="./assets/icons/monitor.svg" alt="Live Class" />
+              </div>
+              <h3 class="title">Live Class</h3>
+              <p class="desc">
+                We are providing live classes with the best teacher for you
+              </p>
+            </div>
+
+            <div class="item">
+              <div class="icon">
+                <img src="./assets/icons/chat.svg" alt="Task" />
+              </div>
+              <h3 class="title">Task</h3>
+              <p class="desc">
+                Conversation with teachers or another students about task or any
+                other thing
+              </p>
+            </div>
+
+            <div class="item">
+              <div class="icon">
+                <img src="./assets/icons/file.svg" alt="Task" />
+              </div>
+              <h3 class="title">Task</h3>
+              <p class="desc">
+                We give every of our students task for gathering knowledge at
+                home
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
