--- a/index.html
+++ b/index.html
@@ -164,6 +164,82 @@
           </div>
         </div>
       </div>
+
+      <!-- Courses -->
+      <div class="courses">
+        <div class="main-content">
+          <div class="body">
+            <p class="sub-heading">C O U R S E S</p>
+            <h2 class="heading">Popular Courses</h2>
+            <div class="cta-group">
+              <p class="desc">
+                Check out our most popular courses that suit for you. Here you
+                can find your favorite one.
+              </p>
+              <a href="#!" class="view-all">View All Courses</a>
+            </div>
+          </div>
+
+          <div class="course-list">
+            <div class="item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course-1.jpg"
+                  alt="Web Design"
+                  class="thumb"
+                />
+              </a>
+              <div class="content">
+                <h3 class="title"><a href="#!">Web Design</a></h3>
+                <p class="price">Fee <strong>$200</strong></p>
+                <p class="desc">Web design basic to higer level</p>
+                <div class="sub-info">
+                  <span class="classes">40 Classes</span>
+                  <span class="time">3 Months</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course-2.jpg"
+                  alt="Web Development"
+                  class="thumb"
+                />
+              </a>
+              <div class="content">
+                <h3 class="title"><a href="#!">Web Development</a></h3>
+                <p class="price">Fee <strong>$250</strong></p>
+                <p class="desc">Web development basic to higer level</p>
+                <div class="sub-info">
+                  <span class="classes">30 Classes</span>
+                  <span class="time">3 Months</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course-3.jpg"
+                  alt="UI/UX Design"
+                  class="thumb"
+                />
+              </a>
+              <div class="content">
+                <h3 class="title"><a href="#!">UI/UX Design</a></h3>
+                <p class="price">Fee <strong>$350</strong></p>
+                <p class="desc">UI/UX design basic to higer level</p>
+                <div class="sub-info">
+                  <span class="classes">50 Classes</span>
+                  <span class="time">4 Months</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
