add stats, feedback and admit ui

--- a/index.html
+++ b/index.html
@@ -240,6 +240,128 @@
           </div>
         </div>
       </div>
+
+      <!-- Stats -->
+      <div class="stats">
+        <div class="main-content">
+          <div class="body">
+            <div class="item">
+              <p class="quantity">100+</p>
+              <p class="title">Popular Courses</p>
+            </div>
+
+            <div class="item">
+              <p class="quantity">500+</p>
+              <p class="title">Skilled Trainer</p>
+            </div>
+
+            <div class="item">
+              <p class="quantity">1M+</p>
+              <p class="title">Student Learning</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Feedback -->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="body">
+            <div class="feedback-left">
+              <div class="feedback-list">
+                <div class="item">
+                  <img
+                    src="./assets/icons/quote.svg"
+                    alt=""
+                    class="quote-img"
+                  />
+                  <blockquote>
+                    “They are the best people. And this is the suitable platform
+                    to learn from distance.”
+                  </blockquote>
+                  <p class="name"><strong>Ben Foakes,</strong> student.</p>
+                </div>
+
+                <div class="item">
+                  <img
+                    src="./assets/icons/quote.svg"
+                    alt=""
+                    class="quote-img"
+                  />
+                  <blockquote>
+                    “This platform really helps me grow my knowledge and
+                    confidence every day.”
+                  </blockquote>
+                  <p class="name"><strong>Sarah Johnson,</strong> designer.</p>
+                </div>
+
+                <div class="item">
+                  <img
+                    src="./assets/icons/quote.svg"
+                    alt=""
+                    class="quote-img"
+                  />
+                  <blockquote>
+                    “An excellent community with helpful mentors and inspiring
+                    learning paths.”
+                  </blockquote>
+                  <p class="name"><strong>Michael Lee,</strong> developer.</p>
+                </div>
+
+                <div class="item">
+                  <img
+                    src="./assets/icons/quote.svg"
+                    alt=""
+                    class="quote-img"
+                  />
+                  <blockquote>
+                    “I’ve learned so much in such a short time. Truly worth
+                    every moment spent.”
+                  </blockquote>
+                  <p class="name"><strong>Emily Carter,</strong> marketer.</p>
+                </div>
+
+                <div class="item">
+                  <img
+                    src="./assets/icons/quote.svg"
+                    alt=""
+                    class="quote-img"
+                  />
+                  <blockquote>
+                    “Great lessons and flexible learning schedule. Perfect for
+                    busy learners.”
+                  </blockquote>
+                  <p class="name"><strong>Daniel Smith,</strong> engineer.</p>
+                </div>
+              </div>
+              <div class="action">
+                <button class="left">
+                  <img src="./assets/icons/chevron-left.svg" alt="" />
+                </button>
+                <button class="right">
+                  <img src="./assets/icons/chevron-right.svg" alt="" />
+                </button>
+              </div>
+            </div>
+            <div class="feedback-right">
+              <img src="./assets/img/feedback-img.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Admit -->
+      <div class="admit">
+        <div class="main-content">
+          <div class="body">
+            <div class="content">
+              <h2 class="title">Ready to Get Admit</h2>
+              <p class="desc">Create your account and Boost your Career.</p>
+            </div>
+            <a href="" class="btn">Get Started</a>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
